--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,1 +1,39 @@
-form: <%= link_to '新規投稿', new_picture_path %>
+<% content_for(:title, 'DPgram') %>
+<div class="picture-wrapper">
+  <div class="picture-display">
+    <div class="row">
+      <%if @pictures.present? %>
+        <% @pictures.each do |picture| %>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="card" style="width: 14rem;">
+              <div class="card-picture">
+                <%= link_to picture_path(picture.id) do %>
+                  <%= image_tag picture.image.url, class: "card-img-top"%> <% end %>
+              </div>
+              <div class="card-body">
+                <h4 class="card-text"><%= picture.content %></h4>
+                <div class="article-data card-text">
+                  <span><%= picture.id %></span>
+                  <h5><%= picture.created_at.strftime('%Y年%-m月%-d日 %H:%M') %></h5>
+                </div>
+                <div class="card-button">
+                  <%= link_to picture_path(picture.id) do %>
+                    <span class="bi bi-info-square" title="詳細"></span><% end %>
+
+                    <span class="bi bi-pencil-square" title="編集不可"></span>
+                    <span class="bi bi-trash" title="削除不可"></span>
+
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      <% else %>
+        <div class="empty-wrapper">
+          <%= image_tag '/assets/noimage.png', class: 'no-image' %>
+          <h2>まだ記事がありません。</h2>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
