--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,4 +1,411 @@
 /*
- *= require_tree .
  *= require_self
  */
+
+ html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+}
+
+html body {
+  background-color: #f0f2f5;
+}
+
+.wrapper {
+  display: block;
+  min-width: 500px;
+  width: 100%;
+}
+
+.content {
+  margin: 0 auto;
+  padding: 20px 20px 0;
+  height: auto;
+  box-sizing: border-box;
+}
+
+.header {
+  height: 50px;
+  font-size: 0.9rem;
+  box-shadow: 0 5px 3px 0px rgba(0, 0, 0, 0.05);
+  background-color: #ffffff;
+  position: relative;
+}
+
+.alert-wrapper {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  width: 350px;
+  z-index: 1;
+}
+
+.alert {
+  position: absolute;
+  top: 10px;
+  right: 5px;
+  width: 350px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.form-box {
+  margin: 40px auto;
+  padding: 6px 8px 20px;
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+}
+
+.form-error-message {
+  color: rgb(114,28,36);
+  font-size: 15px;
+  line-height: 20px;
+  margin: 10px 0;
+  padding: 0 10px;
+  text-align: left;
+  border: 1px solid rgb(245,198,203);
+  background-color: rgb(248,215,218);
+}
+
+.form-error-message h5 {
+  font-size: clamp(15px, 16px, 17px);
+  font-weight: 600;
+  margin-top: 0.5rem;
+  text-align: left !important;
+}
+
+.form-error-message ul {
+  margin: 0;
+  padding: 0 20px;
+}
+
+.form-error-message li {
+  margin: 0;
+  padding-bottom: 5px;
+}
+
+.icon-image {
+  float: left;
+  margin-left: 10px;
+  margin-top: 5px;
+}
+
+.top_menu {
+  float: right;
+}
+
+.top_menu ul {
+  margin: 0;
+  padding: 0;
+}
+
+.top_menu li {
+  padding: 15px;
+  float: left;
+  width: auto;
+  list-style: none;
+}
+
+.picture-wrapper {
+  height: calc(100vh-70px);
+  box-sizing: border-box;
+}
+
+.picture-display {
+  min-width: 500px;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px 0 0;
+}
+
+.confirm-area {
+  margin: 0 auto;
+}
+
+.card {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  margin: 0 auto 20px;
+  max-width: 376px;
+  height: 370px;
+}
+
+.card-picture {
+  position: relative;
+  width: 100%;
+  min-height: 60%;
+}
+
+.card-picture img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+.card-body {
+  padding-top: 10px !important;
+}
+
+.card-text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.card-text span {
+  font-size: 15px !important;
+}
+
+.card-text h5 {
+  font-size: 13px !important;
+}
+
+.card-button {
+  padding: 5px 0;
+  text-align: center;
+}
+
+.card-button span {
+  font-size: 20px;
+  padding: 0 10px;
+}
+
+.card-button a {
+  color: dodgerblue;
+}
+
+.footer {
+  width: 100%;
+  height: 100%;
+  padding-top: 20px;
+  background-color: #ffffff;
+  display: block;
+  text-align: center;
+}
+
+.copyright {
+  max-width: 980px;
+  font-size: 0.8rem;
+  color: #737373;
+  margin: 0 auto;
+}
+
+.clearfix:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.form-container {
+  padding: 0;
+}
+
+.input-container {
+  padding: 5px 0;
+}
+
+.button-container {
+  padding: 6px;
+  text-align: center;
+  margin: 0 auto;
+  padding: 6px 0;
+}
+
+.form-border {
+  border-bottom: 1px solid #dadde1;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: rgb(218, 221, 225);
+  margin: 20px 0;
+}
+
+.post-wrapper {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.empty-wrapper {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.empty-wrapper h2 {
+  color: gray;
+}
+
+.no-image {
+  max-width: 300px;
+  max-height: 300px;
+}
+
+.card-wrapper {
+  max-width: 400px;
+}
+
+.show-wrapper {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.post-title {
+  color: #050505;
+  background-color: #fff;
+  margin: 0;
+  padding: 6px 8px 6px;
+  border-radius: 4px;
+  text-align: center;
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+}
+
+.post-title h4 {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  margin-top: 0.3rem;
+  margin-bottom: 0;
+  padding: 0.3rem;
+  text-align: center;
+}
+
+.post-img-preview {
+  padding: 6px 8px 6px;
+  min-height: 380px;
+  color: #050505;
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+  object-fit: cover;
+  display: flex;
+  text-align: center;
+  align-items: center;
+}
+
+.post-img-preview h5 {
+  display: inline-block;
+  margin: 0;
+  width: 100%;
+}
+
+.post-img-preview img {
+  max-width: 100%;
+  height: auto;
+}
+
+.post-form {
+  color: #050505;
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+}
+
+.post-form h4 {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  text-align: center;
+}
+
+.post-form h5 {
+  font-size: 16px;
+  text-align: center;
+}
+
+.post-input-label {
+  text-align: left;
+}
+
+.post-file-field {
+  height: auto !important;
+}
+
+.article-container {
+  padding: 6px 8px 16px 8px;
+  line-height: 16px;
+  max-width: auto;
+  margin: 0 auto 10px;
+  color: #050505;
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+  display: block;
+}
+
+.article-header {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 12px;
+  padding: 12px 16px 0 16px;
+}
+
+.article-data {
+  display: block;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.article-data span {
+  display: block;
+  line-height: 20px;
+  margin: 5px 0;
+  width: auto;
+  max-width: 100%;
+  font-size: 18px;
+  font-weight: 600;
+  text-align: left;
+}
+
+.article-data h5 {
+  display: block;
+  min-width: 0;
+  max-width: 100%;
+  width: auto;
+  color: rgb(101, 103, 107);
+  margin: 5px 0;
+  font-weight: 400;
+  font-size: 16px;
+  text-align: left;
+}
+
+.article-edit-icon {
+  display: flex;
+  align-self: flex-start;
+  line-height: 24px;
+  font-size: 25px;
+  padding: 8px 0;
+  align-items: stretch;
+}
+.article-edit-icon span {
+  padding: 10px;
+}
+
+.article-content {
+  display: block;
+  text-align: left;
+  padding: 4px 16px 16px 16px;
+}
+
+.article-content h4 {
+  display: block;
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.article-img-preview {
+  display: block;
+  position: relative;
+}
+
+.article-img-preview img {
+  max-width: 100%;
+  height: auto;
+}
