Adjust image sizing and position in application.css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,7 +23,7 @@ html body {
 
 .content {
   margin: 0 auto;
-  padding: 20px 20px 0;
+  padding: 20px;
   height: auto;
   box-sizing: border-box;
 }
@@ -137,17 +137,23 @@ html body {
 
 .card-picture {
   position: relative;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
   width: 100%;
   min-height: 60%;
 }
 
 .card-picture img {
   position: absolute;
+  object-fit: cover;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   margin: auto;
+  width: 100%;
+  height: 100%;
 }
 
 .card-body {
