Add user show page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
         <li>profile</li>
         <li>logout</li>
       
-        <li>signup</li>
+        <li><%= link_to "サインアップ", new_user_path %></li>
         <li>login</li>
       
     </ul>
