--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,29 @@
-<% content_for(:title, '') %>
+<% content_for(:title, 'プロフィール') %>
 <div class="profile-wrapper">
-  <h2>あなたのプロフィール</h2>
-  <ul class="profile-list">
-    <li>
-      <h4>名前</h4>
-      <span><%= @user.name %></span>
-    </li>
-    <li>
-      <h4>メールアドレス</h4>
-      <span><%= @user.email %></span>
-    </li>
-  </ul>
-  <div>
+  <div class="profile-header">
+    <div class="profile-icon">
+      <%if @user.image.present? %>
+        <%= image_tag picture.image.url %>
+      <% else %>
+        <%= image_tag "default_icon.png" %>
+      <% end %>
+    </div>
+    <section class="profile-list">
+      <ul>
+        <li>
+          <h4>名前</h4>
+          <span><%= @user.name %></span>
+        </li>
+        <li>
+          <h4>メールアドレス</h4>
+          <span><%= @user.email %></span>
+        </li>
+      </ul>
+    </section>
+  </div>
+  <div class="profile-tab">
+    <div class="profile-tab-item">
+      <i class="bi bi-bookmark-heart"></i><span>お気に入り</span>
+    </div>
   </div>
 </div>
