--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,6 +18,10 @@
           <h4>メールアドレス</h4>
           <span><%= @user.email %></span>
         </li>
+        <li>
+          <%= link_to 'プロフィールを編集する', edit_user_path(@user.id) %>
+        </li>
+
       </ul>
     </section>
   </div>
