--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -57,14 +57,15 @@ html body {
   flex-grow: 1;
   flex-shrink: 0;
   justify-content: center;
-  margin-right: 30px;
   position: relative;
 }
 
 .profile-icon img {
   height: auto;
-  width: 150px;
-  position: absolute;
+  max-width: 150px;
+  max-height: 150px;
+  margin: 0 auto;
+  position: relative;
 
 }
 
