--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -33,6 +33,7 @@
       </div>
     </div>
     <div class="button-container">
+      <%= link_to "戻る", user_path, class: "btn btn-success btn-lg w-25 mr-3" %>
       <%= form.submit "編集する", class:"btn btn-primary btn-lg w-50" %>
     </div>
   <% end %>
