Add posting feature by current user

--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:title, 'dpgram') %>
 <div class="post-wrapper">
   <div class="container-fluid">
     <div class="row justify-content-between">
