--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:title, '投稿の作成') %>
 <div class="post-wrapper">
   <div class="container-fluid">
     <div class="row justify-content-between">
