--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:title, 'DPgram') %>
+<% content_for(:title, 'dpgram') %>
 <div class="picture-wrapper">
   <div class="picture-display">
     <div class="row">
@@ -23,12 +23,17 @@
                   <h5><%= picture.created_at.strftime('%Y年%-m月%-d日 %H:%M') %></h5>
                 </div>
                 <div class="card-button">
-                  <%= link_to picture_path(picture.id) do %>
+                 <%= link_to picture_path(picture.id) do %>
                     <span class="bi bi-info-square" title="詳細"></span><% end %>
+                  <% if picture.user.id == current_user.id %>
                     <%= link_to edit_picture_path(picture.id), data:{confirm:"こちらの投稿を編集しますか？"} do %>
                       <span class="bi bi-pencil-square" title="編集"></span><% end %>
                     <%= link_to picture_path(picture.id), method: :delete, data:{confirm:"こちらの投稿を削除しますか？"} do %>
                       <span class="bi bi-trash" title="削除"></span><% end %>
+                  <% else %>
+                    <span class="bi bi-pencil-square" title="編集不可"></span>
+                    <span class="bi bi-trash" title="削除不可"></span>
+                  <% end %>
                 </div>
               </div>
             </div>
