--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -19,7 +19,7 @@
                     <% end %>
                 </div>
                 <div class="article-data card-text">
-                  <span><%= picture.id %></span>
+                  <span><%= picture.user.name %></span>
                   <h5><%= picture.created_at.strftime('%Y年%-m月%-d日 %H:%M') %></h5>
                 </div>
                 <div class="card-button">
