--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,12 +21,10 @@
         <li>
           <%= link_to 'プロフィールを編集する', edit_user_path(@user.id) %>
         </li>
+        <li>
+          <%= link_to 'お気に入りした画像を見る', fav_index_user_path(@user.id) %>
+        </li>
       </ul>
     </section>
-  </div>
-  <div class="profile-tab">
-    <div class="profile-tab-item">
-      <i class="bi bi-bookmark-heart"></i><span>お気に入り</span>
-    </div>
   </div>
 </div>
