--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -105,7 +105,7 @@ html body {
 }
 
 .top_menu li {
-  padding: 15px;
+  padding: 15px 12px;
   float: left;
   width: auto;
   list-style: none;
@@ -252,6 +252,7 @@ html body {
 
 .empty-wrapper h2 {
   color: gray;
+  text-align: center;
 }
 
 .no-image {
