Improve user name display

--- a/app/views/pictures/confirm.html.erb
+++ b/app/views/pictures/confirm.html.erb
@@ -10,7 +10,7 @@
             <div class="article-container">
               <div class="article-header">
                 <div class="article-data">
-                  <strong><span>testtesttest: <%= @picture.id %></span></strong>
+                  <strong><span><%= current_user.name %></span></strong>
                 </div>
               </div>
               <div>
