--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -5,7 +5,7 @@
       <div>
         <div class="article-header">
           <div class="article-data">
-            <strong><span>name area</span></strong>
+            <strong><span><%= @picture.user.name %></span></strong>
             <h5><%= @picture.created_at.strftime('%Y年%-m月%-d日 %H:%M') %></h5>
           </div>
           <div class="article-edit-icon">
